src/objects/KS_seguimiento_proyecto__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Seguimiento de proyectos de iluminación y sistemas de control</description>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lineas_de_proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_obra__c</fullName>
        <label>Descripción obra</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subetapa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_entrada__c</fullName>
        <label>Fecha de entrada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_salida__c</fullName>
        <label>Fecha de salida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Horas__c</fullName>
        <label>Horas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Marca__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Marca</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Mes__c</fullName>
        <label>Mes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Mes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Mod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_PVP__c</fullName>
        <label>PVP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Prescriptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescriptor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Seguimiento proyectos</relationshipLabel>
        <relationshipName>Seguimiento_proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Proyectista__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyectista</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Seguimiento proyectos (Proyectista)</relationshipLabel>
        <relationshipName>Seguimiento_proyectos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Proyecto__c</fullName>
        <label>Proyecto</label>
        <referenceTo>KS_Proyectos__c</referenceTo>
        <relationshipName>Lineas_de_proyectos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Scena_P_V_P__c</fullName>
        <label>Scena P.V.P.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Scena__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scena</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Solicita__c</fullName>
        <label>Solicita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_edificacion__c</fullName>
        <formula>TEXT(KS_Proyecto__r.KS_Oferta__r.KS_Obra__r.KS_Sub_Segmento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de edificación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Viabilidad__c</fullName>
        <label>Viabilidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Zona</valueSetName>
        </valueSet>
    </fields>
    <label>Seguimiento proyecto</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimiento proyectos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>